# emodpy

./: .bumpversion.cfg  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: lint.yml  mkdocs_build.yml  mkdocs_deploy.yml  run-comps-tests.yml  run-pr-tests.yml
docs/: index.md
emodpy/: __init__.py  emod_file.py  emod_task.py
emodpy/campaign/: base_intervention.py  common.py  event.py  event_coordinator.py  individual_intervention.py  waning_config.py
emodpy/generic/: serialization.py
emodpy/reporters/: base.py
emodpy/utils/: targeting_config.py
tests/: helpers.py  test_139.py  test_campaign_common.py  test_workflow_campaign.py
tests/inputs/input_files_emod_common/: config.json  config_basic.json
