[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emodpy"
version = "2.1.17"
description = "Core tools for modeling using EMOD"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Sharon Chen", email = "sharon.chen@gatesfoundation.org"},
    {name = "Zhaowei Du", email = "zhaowei.du@gatesfoundation.org"},
    {name = "Clark Kirkman IV", email = "clark.kirkmand@gatesfoundation.org"},
    {name = "Daniel Bridenbecker", email = "daniel.bridenbecker@gatesfoundation.org"},
    {name = "Svetlana Titova", email = "svetlana.titova@gatesfoundation.org"},
    {name = "Ye Chen", email = "ye.chen@gatesfoundation.org"},
]
keywords = ['modeling', 'IDM']
dependencies = [
    "idmtools[full]~=2.2",
    "emod-api>=2.0.34",
    "matplotlib",
]
license = "MIT"
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent",
    "Framework :: IDM-Tools :: models",
]

[project.optional-dependencies]
docs = [
    "mkdocs-material",
    "mkdocs-include-markdown-plugin",
    "mkdocstrings-python",
    "mkdocs-autoapi",
    "mkdocs-glightbox",
]
lint = [
    "flake8",
]
packaging = [
    "build",
    "twine",
    "bump2version",
]
test = [
    "emod-common",
    "emod-generic",
    "emod-hiv",
    "emod-malaria",
    "idmtools-test",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "unittest-xml-reporting~=3.2",
]

[project.urls]
Repository = "https://github.com/EMOD-Hub/emodpy"
Issues = "https://github.com/EMOD-Hub/emodpy/issues"

[project.entry-points.idmtools_task]
idmtools_task_emod = "emodpy.emod_task:EMODTaskSpecification"

[project.entry-points."idmtools_cli.cli_plugins"]
emodpy = "emodpy_cli.cli.schema:emodpy"

[tool.setuptools.packages]
find = {include = ["emodpy*"]}

[tool.pip]
extra-index-url = "https://packages.idmod.org/api/pypi/pypi-production/simple"
